# Spellchecker

./: README.md
C/loosely-coupled/src/: dict.txt  dictionary.c  dictionary.h  document.c  document.h  input.txt  input.txt~  makefile  spellchecker.c
C/tightly-coupled/src/: makefile  spellchecker.c
Haskell/: spellchecker.cabal
Haskell/src/: CommandLine.hs  Dictionary.hs  Document.hs  Document.hs~  Main.hs  Main.hs~  SpellChecker.hs  input.txt
Java/src/: Spellchecker.java  input.txt
Java/src/dictionary/: Dictionary.java  FileDictionary.java  MemDictionary.java
Java/src/document/: Document.java
Java/src/word/: Word.java  WordSet.java
